assets/css/style.css
/* ... */
.facility-slide._facility-popup .facility-slide__popup {
  opacity: 1;
}
.facility-slide._facility-pointer .facility-slide__popup {
  pointer-events: all;
}

.facility-popup {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 4;
  padding: 20px;
  padding-top: 30px;
  border-radius: 40px;
  background-color: #b3e5fc;
}
.facility-popup__title {
  font-size: 26px;
  font-weight: 700;
  margin-bottom: 15px;
}
.facility-popup__options {
  font-size: 18px;
  padding-left: 20px;
  margin: 20px 0;
}
.facility-popup__options li {
  list-style: initial;
}
.facility-popup__timetable {
  font-size: 17px;
  line-height: 1.4;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
}
.facility-popup__btn {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 65%;
  height: 60px;
  border-radius: 40px 0px 40px 0px;
  font-size: 20px;
  font-weight: 500;
}

.doctors {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding-top: 100px;
  padding-bottom: 480px;
}
@media (max-width: 1400px) {
  .doctors {
    padding-top: 60px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
}
.doctors__wrapper {
  background: url("../images/bg4.svg");
  background-repeat: no-repeat;
  background-position: top left;
}
.doctors__menu {
  min-width: 400px;
  margin-right: 50px;
  margin-left: 50px;
}
@media (max-width: 1400px) {
  .doctors__menu {
    margin: 0;
  }
}
@media (max-width: 430px) {
  .doctors__menu {
    min-width: 0;
  }
}
.doctors__title {
  margin-bottom: 30px;
  line-height: 1.2;
}
@media (max-width: 1400px) {
  .doctors__title {
    text-align: center;
  }
}
.doctors__list {
  max-width: 300px;
}
.doctors__list > li {
  font-size: 24px;
  width: 100%;
  height: 45px;
  padding: 10px;
  border-radius: 40px;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  cursor: pointer;
}
.doctors__list > li:not(:last-child) {
  margin-bottom: 10px;
}
.doctors__list > li:hover {
  background-color: #d4f2ff;
}
.doctors__list > li.active {
  background-color: #b3e5fc;
  color: #0077aa;
}
.doctors__list > li.active:hover {
  background-color: #9fddfa;
}
@media (max-width: 1400px) {
  .doctors__list {
    text-align: center;
    max-width: 800px;
    padding: 0 20px;
    margin: 0 auto;
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 1fr 10px 1fr 10px 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
  }
  .doctors__list > li {
    margin-bottom: 0;
  }
}
@media (max-width: 600px) {
  .doctors__list {
    -ms-grid-columns: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
  }
}
@media (max-width: 430px) {
  .doctors__list {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
}
.doctors__content {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 65px 1fr;
  grid-template-columns: 1fr 1fr;
  gap: 65px;
  width: 100%;
}
.doctors__content.active {
  -webkit-animation-name: hideNshow;
          animation-name: hideNshow;
  -webkit-animation-duration: 1.2s;
          animation-duration: 1.2s;
}
@media (max-width: 1400px) {
  .doctors__content {
    margin: 0 auto;
    margin-top: 50px;
    max-width: 900px;
    gap: 40px;
    justify-items: center;
  }
}
@media (max-width: 900px) {
  .doctors__content {
    gap: 20px;
    padding: 0 10px;
  }
}
@media (max-width: 767px) {
  .doctors__content {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
    gap: 30px;
  }
}
@-webkit-keyframes hideNshow {
  0% {
    opacity: 1;
  }
  40% {
    opacity: 0;
  }
  70% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes hideNshow {
  0% {
    opacity: 1;
  }
  40% {
    opacity: 0;
  }
  70% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.doc-card {
  box-shadow: 0px 0px 22px 2px rgba(202, 202, 202, 0.4);
  -webkit-box-shadow: 0px 0px 22px 2px rgba(202, 202, 202, 0.4);
  -moz-box-shadow: 0px 0px 22px 2px rgba(202, 202, 202, 0.4);
  width: 380px;
  height: 170px;
  background-color: #fff;
  border-radius: 5px;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding: 20px;
  display: none;
}
@media (max-width: 900px) {
  .doc-card {
    width: 350px;
  }
}
@media (max-width: 400px) {
  .doc-card {
    width: 300px;
    max-height: 185px;
  }
}
.doc-card__photo {
  border-radius: 0 50% 50% 50%;
  width: 100px;
  height: 100px;
  position: absolute;
  top: -20px;
  left: -20px;
}
@media (max-width: 400px) {
  .doc-card__photo {
    width: 80px;
    height: 80px;
    top: -10px;
    left: -10px;
  }
}
.doc-card__text {
  padding-left: 80px;
}
.doc-card__name {
  font-size: 22px;
  margin-bottom: 10px;
}
@media (max-width: 400px) {
  .doc-card__name {
    font-size: 20px;
  }
}
.doc-card__job {
  font-size: 20px;
}
@media (max-width: 400px) {
  .doc-card__job {
    font-size: 18px;
  }
}
.doc-card__stats {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
}
.doc-card__stats-wrap::before {
  content: "";
  display: block;
  height: 1px;
  width: 70%;
  background-color: rgba(217, 217, 217, 0.7019607843);
  margin: 0 auto;
  margin-bottom: 20px;
  margin-top: 15px;
}
.doc-card__rating {
  font-size: 16px;
  margin-right: 40px;
}
.doc-card__rating > svg {
  margin-bottom: -5px;
  margin-right: 5px;
}
.doc-card__experience {
  font-size: 16px;
}
.doc-card__experience > svg {
  margin-bottom: -5px;
  margin-right: 5px;
}
.doc-card._visible {
  display: block;
}

.testimonials {
  margin-top: -400px;
}
/* ... */

